# intlang

./: LICENSE  README.md  apptest.intlang  dune  dune-project  intlang.opam  test.intlang
lib/: ast.ml  dune  errors.ml  interp.ml  lexer.mll  parser.mly  parser_old.mly
test/: dune  test_intlang.ml
test/cases/: Y.intlang  Z.intlang  Z.intlang.not  churchbool.intlang  curry.intlang  det.intlang  fib.intlang  gcd.intlang  list.intlang  list_nth.intlang  mod.intlang  pipe.intlang  quad.intlang  rep.intlang  test.intlang
